--- a/bbl/i18n/list.txt
+++ b/bbl/i18n/list.txt
@@ -58,6 +58,9 @@ src/slic3r/GUI/ConnectPrinter.cpp
 src/slic3r/GUI/HMSPanel.cpp
 src/slic3r/GUI/MainFrame.cpp
 src/slic3r/GUI/MediaPlayCtrl.cpp
+src/slic3r/GUI/MediaFilePanel.cpp
+src/slic3r/GUI/ImageGrid.cpp
+src/slic3r/GUI/Printer/PrinterFileSystem.cpp
 src/slic3r/GUI/Mouse3DController.cpp
 src/slic3r/GUI/StatusPanel.cpp
 src/slic3r/GUI/Monitor.cpp
