--- a/bbl/i18n/hu/BambuStudio_hu.po
+++ b/bbl/i18n/hu/BambuStudio_hu.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-08-30 14:28+0800\n"
+"POT-Creation-Date: 2022-09-01 09:20+0800\n"
 "PO-Revision-Date: 2022-07-27 22:05+0100\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -345,9 +345,6 @@ msgstr ""
 
 msgid "Perform Recognition"
 msgstr "Felismerés"
-
-msgid "Clipping of view"
-msgstr ""
 
 msgid "Reset direction"
 msgstr ""
@@ -1416,6 +1413,18 @@ msgstr ""
 
 msgid ""
 "Note: Only the AMS slots loaded with the same material type can be selected."
+msgstr ""
+
+msgid "Enable AMS"
+msgstr ""
+
+msgid "Print with filaments in the AMS"
+msgstr ""
+
+msgid "Disable AMS"
+msgstr ""
+
+msgid "Print with the filament mounted on the back of chassis"
 msgstr ""
 
 msgid "Insertion update"
@@ -2971,7 +2980,7 @@ msgstr "Visszaállítás"
 msgid "Loading file: %s"
 msgstr ""
 
-msgid "The 3mf is not from Bambu lab, load geometry data only."
+msgid "The 3mf is not from Bambu Lab, load geometry data only."
 msgstr ""
 
 msgid "Load 3mf"
@@ -3001,7 +3010,7 @@ msgid ""
 "software.\n"
 msgstr ""
 
-msgid "the 3mf is not compatible, load geometry data only!"
+msgid "The 3mf is not compatible, load geometry data only!"
 msgstr ""
 
 msgid "Incompatible 3mf"
