--- a/bbl/i18n/BambuStudio.pot
+++ b/bbl/i18n/BambuStudio.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-08-30 14:28+0800\n"
+"POT-Creation-Date: 2022-09-01 09:20+0800\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -334,9 +334,6 @@ msgid "Face recognition"
 msgstr ""
 
 msgid "Perform Recognition"
-msgstr ""
-
-msgid "Clipping of view"
 msgstr ""
 
 msgid "Reset direction"
@@ -1336,6 +1333,18 @@ msgstr ""
 
 msgid ""
 "Note: Only the AMS slots loaded with the same material type can be selected."
+msgstr ""
+
+msgid "Enable AMS"
+msgstr ""
+
+msgid "Print with filaments in the AMS"
+msgstr ""
+
+msgid "Disable AMS"
+msgstr ""
+
+msgid "Print with the filament mounted on the back of chassis"
 msgstr ""
 
 msgid "Insertion update"
@@ -2822,7 +2831,7 @@ msgstr ""
 msgid "Loading file: %s"
 msgstr ""
 
-msgid "The 3mf is not from Bambu lab, load geometry data only."
+msgid "The 3mf is not from Bambu Lab, load geometry data only."
 msgstr ""
 
 msgid "Load 3mf"
@@ -2852,7 +2861,7 @@ msgid ""
 "software.\n"
 msgstr ""
 
-msgid "the 3mf is not compatible, load geometry data only!"
+msgid "The 3mf is not compatible, load geometry data only!"
 msgstr ""
 
 msgid "Incompatible 3mf"
