--- a/bbl/i18n/en/BambuStudio_en.po
+++ b/bbl/i18n/en/BambuStudio_en.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Bambu Studio\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-09-01 09:20+0800\n"
+"POT-Creation-Date: 2022-09-07 09:09+0800\n"
 "Language: en\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -820,8 +820,8 @@ msgstr "Clone"
 msgid "Reduce Triangles"
 msgstr "Reduce Triangles"
 
-msgid "Per object edit"
-msgstr "Per Object Edit"
+msgid "Edit in Parameter Table"
+msgstr ""
 
 msgid "Edit print parameters for a single object"
 msgstr "Edit print parameters for a single object"
@@ -1024,8 +1024,8 @@ msgstr "Infill density(%)"
 msgid "Auto Brim"
 msgstr "Auto Brim"
 
-msgid "Inner wall speed"
-msgstr "Inner wall speed"
+msgid "Outer wall speed"
+msgstr ""
 
 msgid "Plate"
 msgstr "Plate"
@@ -1246,9 +1246,6 @@ msgstr ""
 msgid "Unkown Error."
 msgstr ""
 
-msgid "Please Fill Task Report."
-msgstr ""
-
 msgid "Sending print configuration"
 msgstr "Sending print configuration"
 
@@ -1433,6 +1430,17 @@ msgstr ""
 
 msgid "File"
 msgstr "File"
+
+msgid "Please home all axes (click "
+msgstr ""
+
+msgid ""
+") to locate the toolhead's position. This prevents device moving beyond the "
+"printable boundary and causing equipment wear."
+msgstr ""
+
+msgid "Go Home"
+msgstr ""
 
 msgid ""
 "A error occurred. Maybe memory of system is not enough or it's a bug of the "
@@ -2176,14 +2184,11 @@ msgstr ""
 msgid "Invalid input."
 msgstr ""
 
-msgid "Enter a search term"
-msgstr "Enter a search term"
+msgid "New Window"
+msgstr ""
 
-msgid "Online"
-msgstr "Online"
-
-msgid "Offline"
-msgstr "Offline"
+msgid "Open a new window"
+msgstr ""
 
 msgid "Application is closing"
 msgstr "Closing application"
@@ -2205,9 +2210,6 @@ msgstr "Device"
 
 msgid "Project"
 msgstr "Project"
-
-msgid "Debug"
-msgstr "Debug"
 
 msgid "Slice"
 msgstr "Slice"
@@ -2245,9 +2247,6 @@ msgstr "Check for Updates"
 #, c-format, boost-format
 msgid "&About %s"
 msgstr "&About %s"
-
-msgid "Show Log"
-msgstr ""
 
 msgid "Open Network Test"
 msgstr ""
@@ -2292,6 +2291,9 @@ msgstr "Right"
 
 msgid "Right View"
 msgstr "Right View"
+
+msgid "Start a new window"
+msgstr ""
 
 msgid "New Project"
 msgstr "New Project"
@@ -2419,6 +2421,12 @@ msgstr "Use Perspective View"
 msgid "Use Orthogonal View"
 msgstr "Use Orthogonal View"
 
+msgid "Show &Labels"
+msgstr ""
+
+msgid "Show object labels in 3D scene"
+msgstr ""
+
 msgid "Preferences"
 msgstr "Preferences"
 
@@ -2483,8 +2491,10 @@ msgstr ""
 #, c-format, boost-format
 msgid "There is %d config exported. (Only non-system configs)"
 msgid_plural "There are %d configs exported. (Only non-system configs)"
-msgstr[0] "There is %d preset exported. (Only non-system and currently used presets)"
-msgstr[1] "There are %d presets exported. (Only non-system and currently used presets)"
+msgstr[0] ""
+"There is %d preset exported. (Only non-system and currently used presets)"
+msgstr[1] ""
+"There are %d presets exported. (Only non-system and currently used presets)"
 
 msgid "Export result"
 msgstr ""
@@ -2496,8 +2506,10 @@ msgstr ""
 msgid "There is %d config imported. (Only non-system and compatible configs)"
 msgid_plural ""
 "There are %d configs imported. (Only non-system and compatible configs)"
-msgstr[0] "There is %d preset imported. (Only non-system and compatible presets)"
-msgstr[1] "There are %d presets imported. (Only non-system and compatible presets)"
+msgstr[0] ""
+"There is %d preset imported. (Only non-system and compatible presets)"
+msgstr[1] ""
+"There are %d presets imported. (Only non-system and compatible presets)"
 
 msgid "Import result"
 msgstr ""
@@ -2582,20 +2594,21 @@ msgstr ""
 msgid "Choose save directory"
 msgstr ""
 
-msgid "Waiting"
-msgstr "Waiting"
-
-msgid "Retry"
+msgid "Download waiting..."
 msgstr ""
 
-msgid "Failed"
+msgid "Retry"
 msgstr ""
 
 msgid "Open"
 msgstr ""
 
-msgid "Finished"
-msgstr "Finished"
+msgid "Download finished"
+msgstr ""
+
+#, c-format, boost-format
+msgid "Downloading %d%%..."
+msgstr ""
 
 msgid "Speed:"
 msgstr "Speed:"
@@ -3515,6 +3528,12 @@ msgstr "For \"%1%\", add \"%2%\" as a new preset"
 #, boost-format
 msgid "Simply switch to \"%1%\""
 msgstr "Simply switch to \"%1%\""
+
+msgid "Online"
+msgstr "Online"
+
+msgid "Offline"
+msgstr "Offline"
 
 msgid "My Device"
 msgstr "My Device"
@@ -6626,6 +6645,24 @@ msgstr "Support: fix holes at layer %d"
 #, c-format, boost-format
 msgid "Support: propagate branches at layer %d"
 msgstr "Support: propagate branches at layer %d"
+
+#~ msgid "Enter a search term"
+#~ msgstr "Enter a search term"
+
+#~ msgid "Debug"
+#~ msgstr "Debug"
+
+#~ msgid "Waiting"
+#~ msgstr "Waiting"
+
+#~ msgid "Finished"
+#~ msgstr "Finished"
+
+#~ msgid "Per object edit"
+#~ msgstr "Per Object Edit"
+
+#~ msgid "Inner wall speed"
+#~ msgstr "Inner wall speed"
 
 #~ msgid "the 3mf is not compatible, load geometry data only!"
 #~ msgstr "The 3mf is not compatible, loading geometry data only!"
